Add Staff Entity

--- a/src/main/webapp/i18n/vi/global.json
+++ b/src/main/webapp/i18n/vi/global.json
@@ -9,6 +9,7 @@
                 "main": "Thực thể",
                 "restaurant": "Restaurant",
                 "customer": "Customer",
+                "staff": "Staff",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
