--- a/src/main/webapp/i18n/en/category.json
+++ b/src/main/webapp/i18n/en/category.json
@@ -19,7 +19,8 @@
             "dateCreated": "Date Created",
             "dateUpdated": "Date Updated",
             "name": "Name",
-            "restaurant": "Restaurant"
+            "restaurant": "Restaurant",
+            "productType": "Product Type"
         }
     }
 }
