Add extra field on address entity and product

--- a/src/main/webapp/i18n/en/address.json
+++ b/src/main/webapp/i18n/en/address.json
@@ -19,6 +19,8 @@
             "city": "City",
             "street": "Street",
             "country": "Country",
+            "supportEmail": "Support Email",
+            "contactNumber": "Contact Number",
             "restaurant": "Restaurant"
         }
     }
