--- a/src/main/webapp/i18n/en/reservation.json
+++ b/src/main/webapp/i18n/en/reservation.json
@@ -18,10 +18,9 @@
             },
             "comment": "Comment",
             "status": "Status",
-            "startTime": "Start Time",
-            "endTime": "End Time",
             "reserverDate": "Reserver Date",
             "updatedDate": "Updated Date",
+            "period": "Period",
             "staff": "Staff",
             "bookTable": "Book Table",
             "customer": "Customer"
