modify sale order

--- a/src/main/webapp/i18n/en/cart.json
+++ b/src/main/webapp/i18n/en/cart.json
@@ -19,6 +19,8 @@
             "dateCreated": "Date Created",
             "dateUpdated": "Date Updated",
             "totalItem": "Total Item",
+            "productName": "Product Name",
+            "productPrice": "Product Price",
             "product": "Product",
             "customer": "Customer"
         }
