Add new entity tableType

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -27,6 +27,7 @@
                 "bookTable": "Book Table",
                 "reservation": "Reservation",
                 "rating": "Rating",
+                "tableType": "Table Type",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
