update book table

--- a/src/main/webapp/i18n/en/bookTable.json
+++ b/src/main/webapp/i18n/en/bookTable.json
@@ -17,10 +17,10 @@
                 "title": "Book Table"
             },
             "isAvaliable": "Is Avaliable",
-            "persons": "Persons",
             "price": "Price",
             "imageUrl": "Image Url",
-            "restaurant": "Restaurant"
+            "restaurant": "Restaurant",
+            "tableType": "Table Type"
         }
     }
 }
