--- a/src/main/webapp/i18n/vi/happyOrder.json
+++ b/src/main/webapp/i18n/vi/happyOrder.json
@@ -24,7 +24,8 @@
             "customer": "Customer",
             "coupon": "Coupon",
             "restaurant": "Restaurant",
-            "staff": "Staff"
+            "staff": "Staff",
+            "bookTable": "Book Table"
         }
     }
 }
