Add product Upload

--- a/src/main/webapp/i18n/en/product.json
+++ b/src/main/webapp/i18n/en/product.json
@@ -23,6 +23,7 @@
             "updatedDate": "Updated Date",
             "isAvailable": "Is Available",
             "showOnHomepage": "Show On Homepage",
+            "prodct_image": "Prodct Image",
             "restaurant": "Restaurant",
             "category": "Category"
         }
