--- a/src/main/webapp/i18n/vi/bookTable.json
+++ b/src/main/webapp/i18n/vi/bookTable.json
@@ -19,6 +19,7 @@
             "isAvaliable": "Is Avaliable",
             "price": "Price",
             "imageUrl": "Image Url",
+            "table_image": "Table Image",
             "restaurant": "Restaurant",
             "tableType": "Table Type"
         }
